--- a/package.json
+++ b/package.json
@@ -26,29 +26,43 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.68.0",
+    "@radix-ui/react-toast": "^1.2.15",
     "better-sqlite3": "^9.2.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cron-parser": "^5.0.4",
     "diff": "^5.2.0",
     "docx": "^9.5.1",
     "electron-updater": "^6.1.7",
     "keytar": "^7.9.0",
+    "lucide-react": "^0.554.0",
     "openai": "^6.9.0",
     "pdf-lib": "^1.17.1",
-    "reactflow": "^11.11.4"
+    "reactflow": "^11.11.4",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@types/better-sqlite3": "^7.6.8",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.22",
     "commander": "^11.1.0",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "electron": "^28.1.0",
     "electron-builder": "^24.9.1",
+    "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5.3.3",
     "vite": "^5.0.10",
     "vite-plugin-electron": "^0.28.1",
