--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.68.0",
+    "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-toast": "^1.2.15",
     "better-sqlite3": "^9.2.2",
     "class-variance-authority": "^0.7.1",
